--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 API_TOKEN=kmzway87aa
+WA_SEND_URL=http://localhost:5001/send-message
+WA_SESSION=mysession
