implementasi anoman dan bug fixing

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,7 @@ VITE_APP_NAME="${APP_NAME}"
 API_TOKEN=kmzway87aa
 WA_SEND_URL=http://localhost:5001/send-message
 WA_SESSION=mysession
+
+ANOMAN_APP_TOKEN=kmzway87aa
+ANOMAN_SEND_URL=http://anoman.test/api/send
+ANOMAN_APP_TOKEN=1|vxJL8PzKOW7LBQqvPrbGspWrifUcQpXSk8UTJLHKd58fbc43
